# TSK

./: .gitignore  CHANGELOG.md  README.md  RELEASE_ROADMAP.md  SECURITY.md  TESTING.md  TESTING_CHECKLIST.md  config.py  db.py  deployments.py  devices.py  flash.py  network.py  paths.py  payload_sets.py  pyproject.toml  repos.py  run_web.sh  server.py  setup.py  ssh_terminal.py  turtle_ssh.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
archive/tui/: README.md
dropper/: __init__.py  lure_builder.py  receiver.py  snarfsnarf.py
dropper/templates/: exfil_linux.sh.j2  exfil_windows.ps1.j2
scripts/: build_teensy_lab_hex.sh  generate_brand_assets.py
tests/: test_safe_path.py  test_snarf_api.py  test_snarf_isolation.py
users/: config.example.json
web/: index.html  tutorial.html
web/static/music/: README.txt
web/static/payloads/teensy/: tsk_lab_banner.ino
web/static/payloads/usb/: env_reporter.ps1  env_reporter.sh  lab_ping.ps1
