[project]
name = "tsk"
version = "1.0.0"
description = "TSK | The Skeleton Key - USB/HID attack framework. DEF CON 34 Edition."
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "bcrypt>=4.0.0",
    "paramiko>=3.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pylnk3>=0.4.2",
]

[tool.uv]
dev-dependencies = []
